--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
+    "chess.js": "^1.1.0",
     "lucide-react": "^0.476.0",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
